--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -66,12 +66,12 @@
 
     <div class="intro">
       <p>
-        Thank you for sharing your insight — your words are already helping shape what comes next.<br>
+        Thank you for sharing your insight. Your words are already helping shape what comes next.<br>
         <strong>Now let us know who you are</strong> so we can welcome you properly into the Alliance.
       </p>
       <p>
         This quick information helps us connect you with fellow founding teachers in your country, region, and subject area.<br>
-        Your profile stays private — used only to build this movement together.
+        Your profile stays private; used only to build this movement together.
       </p>
     </div>
 
@@ -122,7 +122,7 @@
       <input type="email" id="email" name="email" placeholder="your.email@example.com">
 
       <button type="submit" class="btn">
-       <a href="/alliance/thank-you/" class="btn">Submit & Unlock My Badge →</a> 
+       <a href="/alliance/thank-you/" class="btn">Unlock My Badge →</a> 
       </button>
     </form>
 
