--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph / WhatsApp sharing -->
   <meta property="og:title" content="TichaAfrica — Teachers Leading AI in Africa">
   <meta property="og:description" content="African teachers co-designing how technology serves our classrooms and learners.">
-  <meta property="og:image" content="/assets/images/og-image.png">
+  <meta property="og:image" content="https://tichaafrica.com/assets/images/og-image.jpg">
   <meta property="og:url" content="https://tichaafrica.com">
   <link rel="icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
