--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Founding Teacher Pledge — TichaAfrica</title>
   <meta name="description" content="This is your moment to claim your place in Africa’s learning future.">
+  <!-- Open Graph / WhatsApp Sharing Tags -->
+<meta property="og:title" content="TichaAfrica — Teachers Leading AI in Africa" />
+<meta property="og:description" content="African teachers creating the tools our learners deserve. Join the first 10,000 shaping the future." />
+<meta property="og:image" content="https://tichaafrica.com/assets/images/og-image.jpg" />
+<meta property="og:url" content="https://tichaafrica.com" />
+<meta property="og:type" content="website" />
+
+<!-- Recommended for better preview -->
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:type" content="image/jpeg" />
   <link rel="icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <style>
