--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TichaAfrica — Teach Smart, Lead Change</title>
   <meta name="description" content="Teacher-led Movement Co-designing AI for African Classrooms — by Teachers, for Teachers.">
-  <!-- Open Graph / WhatsApp Sharing Tags -->
+  <!-- Open Graph / WhatsApp -->
 <meta property="og:title" content="TichaAfrica — Teachers Leading AI in Africa" />
-<meta property="og:description" content="African teachers creating the tools our learners deserve. Join the first 10,000 shaping the future." />
-<meta property="og:image" content="https://tichaafrica.com/assets/images/og-image.jpg" />
-<meta property="og:url" content="https://tichaafrica.com" />
+<meta property="og:description" content="African teachers co-designing how AI serves our classrooms. Join the first 10,000 shaping Africa’s learning future." />
 <meta property="og:type" content="website" />
+<meta property="og:url" content="https://tichaafrica.com/" />
 
-<!-- Recommended for better preview -->
+<meta property="og:image" content="https://tichaafrica.com/assets/images/og-image.jpg?v=1" />
+<meta property="og:image:secure_url" content="https://tichaafrica.com/assets/images/og-image.jpg?v=1" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
-<meta property="og:image:type" content="image/jpeg" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
