--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="logo">
         <img src="/assets/images/Logo1.jpg" alt="TichaAfrica">
       </div>
-      <h1>We are 10,000 Teachers Shaping Africa’s Learning Future</h1>
+      <h1>We are Teachers Shaping Africa’s Learning Future</h1>
       <p>
         Our classroom wisdom is what Africa needs right now
       </p>
