--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         <strong>TichaAfrica</strong> exists because of teachers like us. 
       </p>
       <p>
-        Our experience, our challenges, our ideas; they matter more than any imported solution.
-      </p>
-      <p>
-        <strong>TichaAfrica</strong> brings together African teachers to co-design how technology
+        TichaAfrica brings together African teachers to co-design how technology
         serves our classrooms, students, and communities; starting with first-hand
         classroom wisdom.
       </p>
+      <p>
+        Our experience, our challenges, our ideas; they matter more than any imported solution.
+      </p>
       <p class="cta-text">
-            If you're ready to help shape the future of learning in Africa, in the age of AI;<br>
+            If you're ready to help shape the future of learning;<br>
             join us and add your voice by becoming a founding teacher.
       </p>
       <a href="/alliance/intro/" class="btn">
