--- a/alliance/insight/index.html
+++ b/alliance/insight/index.html
@@ -78,7 +78,8 @@
 
     <div class="step">Step 2 of 3 — Your Insight</div>
 
-    <h1>Your voice is the missing piece</h1>
+    <h1>Welcome Teacher!
+      Your voice is the missing piece</h1>
 
     <div class="intro">
       
