--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </main>
 
   <footer>
-    © 2025 TichaAfrica • Teacher-led. Africa-first.
+    © 2026 TichaAfrica • Teach Smart. Lead Change.
   </footer>
 </body>
 </html>
