--- a/alliance/insight/index.html
+++ b/alliance/insight/index.html
@@ -100,8 +100,7 @@ Alliance/insight/
         As a teacher, what’s one real challenge in your classroom today that the right tools — designed by teachers like you; could fix?
       </label>
 
-      <textarea id="insight" name="insight" rows="6" placeholder="Be honest. Your experience matters. Write in any language." required
-        ></textarea>
+      <textarea id="insight" name="insight" rows="6" placeholder="Be honest. Your experience matters. Write in any language." required> </textarea>
 
       <button type="submit" class="btn">
         <a href="/alliance/data/" class="btn">Join →</a>
