--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -31,6 +31,14 @@ textarea{min-height:120px;}
 .btn:disabled{opacity:.6;cursor:not-allowed;}
 footer{text-align:center;padding:24px;color:#64748b;}
 .micro-text{font-size:0.95rem;line-height:1.5;color:#64748b;margin-bottom:16px;}
+  /* Add spacing between fields */
+label,
+input,
+select,
+textarea,
+.micro-text {
+  margin-bottom: 12px; /* subtle spacing, non-disruptive */
+}
 </style>
 </head>
 
@@ -45,13 +53,13 @@ footer{text-align:center;padding:24px;color:#64748b;}
 <!-- Hands-off block -->
 <p class="micro-text">
 Your response is helping shape solutions for real classrooms across Africa.  
-To do this well, we need to know <strong>who every founding teacher is and where they teach</strong>.
+To do this well, we need to know <strong>who every Founding Teacher is and where they teach</strong>.
 </p>
 
 <form id="teacherForm">
 
 <p class="micro-text">
-Start by telling us your name; it helps us recognise your contribution and connect you with fellow founding teachers.
+Start by telling us your name; it helps us recognise your contribution and connect you with fellow Founding Teachers.
 </p>
 <label>Full name</label>
 <input name="fullName" required>
