--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -91,7 +91,7 @@ Select your region/state; this helps place your classroom in the right local con
 <select id="region" name="regionState" required></select>
 
 <p class="micro-text">
-Optional: share your local area/district so we can connect teachers in your immediate community. This keeps your contribution precise and actionable.
+Share your local area/district so we can connect teachers in your immediate community. This keeps your contribution precise and actionable.
 </p>
 <label>Local government / District</label>
 <input name="localGovt">
@@ -103,7 +103,7 @@ Let us know what subject and level you teach. This ensures your classroom challe
 <input name="subjectLevel" required>
 
 <p class="micro-text">
-Add your WhatsApp number — we use it to keep you updated and connected with other founding teachers. Your number is private and secure.
+Add your WhatsApp number. We use it to keep you updated and connected with other founding teachers. Your number is private and secure.
 </p>
 <label>WhatsApp</label>
 <div style="display:flex;gap:8px">
